--- a/MongoDyn.tests/MongoDyn.tests.csproj
+++ b/MongoDyn.tests/MongoDyn.tests.csproj
@@ -54,18 +54,19 @@
     <Compile Include="DynamicTest.cs" />
     <Compile Include="ICustomer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\MongoDyn\MongoDyn.csproj">
-      <Project>{98737104-288b-45e6-9879-41c72fe9e855}</Project>
-      <Name>MongoDyn</Name>
-    </ProjectReference>
+    <Compile Include="TestDocument.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="OrderedTest1.orderedtest">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\MongoDynamic\MongoDynamic.csproj">
+      <Project>{6ae2e8d9-b1c2-4868-a312-ddd5c57c43d3}</Project>
+      <Name>MongoDynamic</Name>
+    </ProjectReference>
   </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
