--- a/MongoDyn.tests/App.config
+++ b/MongoDyn.tests/App.config
@@ -1,6 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-  <connectionStrings>
+ <!-- <connectionStrings>
     <add name="MongoServerSettings" connectionString="mongodb://localhost/Testes?safe=true"/>
-  </connectionStrings>
+  </connectionStrings>-->
+
+
+  <configSections>
+    <sectionGroup name="mongodyn">
+      <section
+        name="mongo"
+        type="MongoDyn.MongoSection, MongoDynamic"
+        allowLocation="true"
+        allowDefinition="Everywhere"
+      />
+    </sectionGroup>
+    <!-- Other <section> and <sectionGroup> elements. -->
+  </configSections>
+  <mongodyn>
+    <mongo database="Testes" host="localhost" port="27017"/>
+  </mongodyn>
 </configuration>
