--- a/MongoDynamic/MongoDynamic.csproj
+++ b/MongoDynamic/MongoDynamic.csproj
@@ -64,6 +64,8 @@
     <Compile Include="Index.cs" />
     <Compile Include="IndexAttribute.cs" />
     <Compile Include="KeyAttribute.cs" />
+    <Compile Include="MongoConfiguration.cs" />
+    <Compile Include="MongoSection.cs" />
     <Compile Include="Pair.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryBuilder.cs" />
