--- a/MongoDyn.tests/MongoDyn.tests.csproj
+++ b/MongoDyn.tests/MongoDyn.tests.csproj
@@ -52,9 +52,8 @@
   </Choose>
   <ItemGroup>
     <Compile Include="DynamicTest.cs" />
-    <Compile Include="ICustomer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TestDocument.cs" />
+    <Compile Include="EagerLoadingTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
